fix: resolve navbar menu icon issue on mobile and remove Font Awesome

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,15 @@ nav {
     background-color: blue;
 }
 
-.navbar .nav-link, .navbar-brand, #hamburger-menu {
+.navbar .nav-link, .navbar-brand {
     color: white;
 }
+
+.navbar-toggler-icon {
+    /* Provides an icon for the navbar on mobile view */
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
 
 .nav-link:hover {
     text-decoration: underline;
